--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,7 @@
+@import url(http://meyerweb.com/eric/tools/css/reset/reset.css);
+
+/*character header*/
+
 html,
 body {
     width: 100%;
@@ -45,8 +49,190 @@ tbody {
     text-align: center;
 }
 
+td {
+    vertical-align: middle;
+}
+
 section {
     margin-top: 15px;
+}
+
+select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
+
+select::-ms-expand {
+    display: none;
+}
+
+header input.player_name {
+    color: #000;
+}
+
+
+/* structure */
+
+.column {
+    display: inline-block;
+    width: 31%;
+    margin: 10px;
+    vertical-align: top;
+}
+
+#character_stats {
+    margin: auto;
+    width: 100%;
+}
+
+#sheet_body {
+    margin: auto;
+    width: 100%;
+}
+
+.dark {
+    background-color: #333;
+    color: #FFF;
+}
+
+.dark b {
+    font-weight: bolder;
+}
+
+.fill_text {
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
+#sheet_header {
+    background-color: #000;
+}
+
+#sheet_header img {
+    margin-left: 20px;
+    vertical-align: bottom;
+}
+
+#character_info input {
+    display: inline-block;
+}
+
+.info_field {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.info_field input {
+    width: 100%;
+}
+
+#name {
+    float: right;
+    margin: 18px;
+    vertical-align: bottom;
+}
+
+#name h2 {
+    text-transform: none;
+    font-size: 18px;
+}
+
+.char_name {
+    width: 30%;
+}
+
+.char_level {
+    width: 45px;
+}
+
+.char_class {
+    width: 15%;
+}
+
+.char_paragon {
+    width: 15%;
+}
+
+.char_epic {
+    width: 15%;
+}
+
+.char_race {
+    width: 15%;
+}
+
+.char_size {
+    width: 5%;
+}
+
+.char_age {
+    width: 5%;
+}
+
+.char_gender {
+    width: 5%;
+}
+
+.char_height {
+    width: 5%;
+}
+
+.char_weight {
+    width: 5%;
+}
+
+.char_alignment {
+    width: 8%;
+}
+
+.char_company {
+    width: 20%;
+}
+
+.underline {
+    padding: 5px;
+    border: none;
+    background-color: #EEE;
+    border-bottom: solid 2px #c9c9c9;
+    transition: border 0.3s;
+    width: 150px;
+}
+
+.underline:focus {
+    border-bottom: solid 2px #969696;
+}
+
+.character_name {
+    width: 200px;
+    font-size: 18px;
+}
+
+
+/* initiative */
+
+.main_score {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.ini-tab {
+    color: black;
+    font-size: 12px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.init_input {
+    height: 35px;
+    font-size: 16px;
+    width: 35px;
+    display: inline-block;
+    float: left;
+    margin: 10px 10px 10px 10px;
+}
+
+.initiative-tab {
+    margin: auto;
+    width: 40%;
 }
 
 
@@ -70,4 +256,237 @@ section {
     font-size: 28px;
     color: white;
     width: 80px;
+}
+
+
+/* hit points */
+
+.hp_input {
+    display: inline-block;
+    border: 1px solid black;
+    width: 60px;
+    height: 30px;
+    text-align: center;
+}
+
+
+/* statuses*/
+
+#active-status {
+    display: inline-block;
+    border: 1px solid black;
+    width: 90%;
+    height: 30px;
+    margin: 5px;
+}
+
+#terrain-status {
+    display: inline-block;
+    border: 1px solid black;
+    width: 90%;
+    height: 30px;
+    margin: 5px;
+}
+
+
+/* skills */
+
+.skill-input-auto {
+    height: 20px;
+    text-align: center;
+    background-color: #D3D3D3;
+}
+
+span {
+    display: block;
+}
+
+.skill-name {
+    height: 20px;
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: bold;
+    background-color: #D3D3D3;
+}
+
+.skill-ability {
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+}
+
+.trnd {
+    height: 20px;
+    text-align: center;
+    background-color: #D3D3D3;
+}
+
+.skill-input {
+    width: 30%;
+    border: 1px solid black;
+}
+
+
+/* defenses */
+
+.def-input {
+    border-radius: 100%;
+    height: 50px;
+    text-align: center;
+    width: 50px;
+    font-weight: bold;
+    font-size: 20px;
+    border: 2px solid black;
+    background-color: white;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.input-def-auto {
+    height: 30px;
+    text-align: center;
+    width: 40px;
+    font-size: 16px;
+}
+
+.def-for {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.def-ref {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.def-wil {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.def-tag {
+    background-color: black;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    width: 60px;
+    z-index: -1;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.def-tab {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+
+/* race / class features*/
+
+.race-class-features {
+    height: 170px;
+    width: 100%;
+}
+
+.feature-div {}
+
+
+/*speed*/
+
+.speed-tag {
+    background-color: black;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    width: 90px;
+    z-index: -1;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.speed {
+    height: 50px;
+    text-align: center;
+    width: 50px;
+    font-weight: bold;
+    font-size: 20px;
+    border: 2px solid black;
+    background-color: white;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.speed-tab {
+    height: 25px;
+    margin: 0px 5px 5px 5px;
+    text-align: center;
+    width: 40px;
+    font-size: 16px;
+    vertical-align: middle;
+}
+
+.speed-table {
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.special-movement {
+    position: relative;
+    left: 370px;
+    bottom: 139px;
+}
+
+.movement-table {
+    height: 50px;
+    width: 200px;
+}
+
+
+/*-*-*-*--*-*-*-*-*-*-*-*/
+
+.table-class {
+    display: inline-block;
+}
+
+
+/*-*-*-*-atack workspace-*-*-*-*/
+
+div a {
+    display: inline-block;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+
+/*-*-*-*-*-*-*@media-*-*-*-*/
+
+@media only screen and (max-device-width: 480px) {
+    .no-show-480px {
+        display: none;
+    }
+    .bonus-480px {
+        /* width: ;*/
+    }
+    .width-480px {
+        width: 60%;
+    }
+    .skill-input {
+        width: 40%;
+    }
 }
