--- a/style/index-style.css
+++ b/style/index-style.css
@@ -1,5 +1,4 @@
 .header-banner {
-    height: 120px;
     background-color: black;
     width: 100%;
     color: #ff3333;
@@ -13,7 +12,7 @@
 
 .index-module {
     position: absolute;
-    height: 550px;
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
@@ -32,7 +31,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.5;
-    height: 550px;
+    height: 100%;
     width: 100%;
 }
 
